WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
249042
[SIMD] Intel support for extended integer arithmetic and fix bitmask operation
https://bugs.webkit.org/show_bug.cgi?id=249042
Summary
[SIMD] Intel support for extended integer arithmetic and fix bitmask operation
Yijia Huang
Reported
2022-12-09 13:32:45 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Yijia Huang
Comment 1
2022-12-09 13:36:00 PST
<
rdar://103192622
>
Yijia Huang
Comment 2
2022-12-09 13:42:30 PST
Pull request:
https://github.com/WebKit/WebKit/pull/7344
Yijia Huang
Comment 3
2022-12-09 13:45:08 PST
Pull request:
https://github.com/WebKit/WebKit/pull/7407
EWS
Comment 4
2022-12-09 17:14:50 PST
Committed
257657@main
(ddd1dc16c98a): <
https://commits.webkit.org/257657@main
> Reviewed commits have been landed. Closing PR #7407 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug