[SIMD] Intel support for extended integer arithmetic and fix bitmask operation https://bugs.webkit.org/show_bug.cgi?id=249042 rdar://103192622

Reviewed by NOBODY (OOPS!).

Add support for extended integer arithmetic operations and fix `i16x8.bitmask`.
https://github.com/WebAssembly/simd/blob/main/proposals/simd/SIMD.md#extended-integer-arithmetic

* Source/JavaScriptCore/assembler/MacroAssemblerX86_64.h:
(JSC::MacroAssemblerX86_64::vectorBitmask):
(JSC::MacroAssemblerX86_64::vectorExtaddPairwise):
* Source/JavaScriptCore/assembler/X86Assembler.h:
(JSC::X86Assembler::vshufps_rrr):
(JSC::X86Assembler::vblendvpd_rrrr):
(JSC::X86Assembler::vcmppd_rrr):
(JSC::X86Assembler::vmovdqa_rr):
(JSC::X86Assembler::vpmaddubsw_rrr):
(JSC::X86Assembler::vpsrld_i8rr):
(JSC::X86Assembler::vpblendw_i8rrr):
(JSC::X86Assembler::X86InstructionFormatter::SingleInstructionBufferWriter::memoryModRM):
* Source/JavaScriptCore/b3/air/AirOpcode.opcodes:
* Source/JavaScriptCore/wasm/WasmAirIRGenerator.cpp:
(JSC::Wasm::AirIRGenerator::addSIMDV_V):